# qt-snippets

./: .gitignore  CMakeLists.txt  README.md  qt-snippets.pro
.github/workflows/: ci.yml
_base/: CMakeLists.txt  README.md  main.cpp
built-in-translation/: CMakeLists.txt  README.md  main.cpp
built-in-translation/res/: languages.qrc
built-in-translation/res/translations/: myapp_es.ts  myapp_sp.ts
built_in_translation/: CMakeLists.txt  main.cpp
built_in_translation-31533019/res/translations/: CMakeLists.txt
built_in_translation/res/: languages.qrc
built_in_translation/res/translations/: CMakeLists.txt  myapp_en.ts  translation_en.ts  translation_es.ts
closing_qfiledialog-38307668/: closing_qfiledialog-38307668.pro  main.cpp
event-filters/: CMakeLists.txt  event-filters.pro  event-filters.qrc  main.cpp  mywindow.cpp  mywindow.h
focus-changed-signal/: CMakeLists.txt  README.md  dialog.h  dialog.ui
focus_changed_signal/: dialog.cpp  focus_changed_signal.pro
key_press_event_in_qframe/: README.md  key_press_event_in_qframe.pro  main.cpp  myframe.cpp  myframe.h
key_press_event_in_qframe-31617189/: CMakeLists.txt  main.cpp  myframe.cpp
layouts-36709808/: layouts-36709808.pro  widget.cpp  widget.h
models-copying-qtableview/: models-copying-qtableview.pro  widget.cpp  widget.h  widget.ui
models-simple-qtableview/: models-simple-qtableview.pro  widget.cpp  widget.h  widget.ui
models-sorting-qtableview/: models-sorting-qtableview.pro  widget.cpp  widget.h  widget.ui
monochromatic-button-stylesheet-53835328/: main.cpp  mainwindow.cpp  mainwindow.h  monochromatic-button-stylesheet-53835328.pro
move-toolbar-35770108/: mainwindow.cpp  mainwindow.h  move-toolbar-35770108.pro
popup_qpushbutton/: CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  main.cpp  popup_qpushbutton.pro  popupmenu.cpp  popupmenu.h
qbytearray/: qbytearray.pro
qdomdocument/: CMakeLists.txt  main.cpp  myxml.xml  myxml_error.xml  qdomdocument.pro  res.qrc
qfiledialog-43303171/: main.cpp  qfiledialog-43303171.pro
qgraphicstextitem/: CMakeLists.txt  graphicstextitem_1.cpp  graphicstextitem_1.h  graphicstextitem_2.cpp  graphicstextitem_2.h  graphicstextitem_3.cpp  graphicstextitem_3.h  main.cpp  qgraphicstextitem.pro
qinputdialog-with-keypressevent-41727520/: main.cpp  myinputdialog.cpp  myinputdialog.h  qinputdialog-with-keypressevent-41727520.pro
qml-add-tab-dinamically-61983608/: MyTab.qml  main.qml  qml.qrc
qml-audio/: CMakeLists.txt  main.qml  qml.qrc
qml-bind-signal-from-delegate-36082678/: MyDelegate.qml  main.qml  qml.qrc
qml-canvas-36992623/: MainForm.ui.qml  main.qml
qml-chartview/: main.cpp  main.qml  main2.qml  qml-chartview.pro
qml-combobox-not-enabled/: main.qml
qml-creating-qml-windows-35131325/: main.cpp  main.qml  main2.qml  main3.qml  main4.qml  main5.qml  main6.qml  qml-creating-qml-windows-35131325.pro  qml.qrc
qml-display-certain-number-characters-35280334/: main.qml  myscript.js
qml-filedialogs/: main.qml
qml-focus/: CMakeLists.txt  main.qml
qml-keyevent-shortcut-64813467/: main.qml
qml-listview-drag-and-drop-36449029/: main.qml
qml-listview-headers-37111316/: main.qml
qml-listview-highlight/: main.qml
qml-listview-multiple-selection-68287598/: main.qml
qml-mouse-events/: CMakeLists.txt  main.qml  qml.qrc
qml-repeater/: CMakeLists.txt  main.cpp  main.qml
qml-resizing-tableview/: main.qml
qml-sequentialanimation-39843303/: main.qml  qml-sequentialanimation-39843303.pro
qml-signals-in-dynamically-created-objects/: MessageBox.qml  main.qml  qml.qrc
qml-styles/: main.qml  styles.pro  styles.qrc
qml-tableview/: main.qml
qml-tableview-adding-and-removing-36623734/: main.qml  qml.qrc
qml-tableview-get-delegate-value-36470650/: main.qml
qml-tableview-rowdelegate-36156526/: main.qml
qml-timer-73373314/: main.qml
qml-xmllistmodel/: main.qml  qml-xmllistmodel.pro  qml.qrc
qml-xmllistmodel/res/: myxml.xml
qprocess-script-reading-writing-41848939/: main.cpp  myscript.sh  qprocess-script-reading-writing-41848939.pro
qsharedmemory/reader/: main.cpp  qsharedmemory-reader.pro
qsharedmemory/writer/: main.cpp  qsharedmemory-writer.pro
qsoundeffect/: main.cpp  qsoundeffect.pro  qsoundeffect.qrc  widget.cpp  widget.h
qtcpsocket/client/: client.pro  main.cpp  tcpclient.cpp  tcpclient.h
qtcpsocket/server/: main.cpp  server.pro  tcpserver.cpp  tcpserver.h
qudpsocket-receiver/: CMakeLists.txt  main.cpp  receiver.cpp  receiver.h
qudpsocket-sender/: CMakeLists.txt  main.cpp  multicastsender.pro  sender.cpp  sender.h
richtext/: renderarea.cpp  renderarea.h  richtext.pro  widget.cpp  widget.h
rounded_popup/: CMakeLists.txt  dialog.cpp  dialog.h  rounded_popup.pro
rounded_popup/qss/: style.qss
sharedmemory/: ifacetype.h  typea.h  typeb.cpp  typeb.h  writer.h
stylesheet/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stylesheet  stylesheet.pro  stylesheet.qrc
stylesheet/qss/: cool.qss  cool_v2.qss  main_window_background.qss  pushbutton_border_image.qss  pushbutton_image_centered.qss  stack.qss
tabs/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tabs.pro
testing_widgets/: CMakeLists.txt  README.md  testwidgets.cpp  testwidgets.h
