cmake_minimum_required (VERSION 3.29)
project (qt-snippets)

add_subdirectory (built_in_translation)
add_subdirectory (event-filters)
add_subdirectory (focus-changed-signal)
add_subdirectory (popup_qpushbutton)
add_subdirectory (testing_widgets)
add_subdirectory (key_press_event_in_qframe-31617189)
