cmake_minimum_required (VERSION 3.25)
project (qt-snippets)

add_subdirectory (built_in_translation)
add_subdirectory (event-filters)
add_subdirectory (focus-changed-signal)
add_subdirectory (popup_qpushbutton)
add_subdirectory (testing_widgets)
add_subdirectory (key_press_event_in_qframe-31617189)
add_subdirectory (qudpsocket-sender)
add_subdirectory (qudpsocket-receiver)
add_subdirectory (stylesheet)

add_subdirectory (qml-focus)
